@@ -305,10 +305,6 @@
   <!-- config for the admin interface --> 
   <admin>
     <defaultQuery>*:*</defaultQuery>
-    
-    <!-- configure a healthcheck file for servers behind a loadbalancer
-    <healthcheck type="file">server-enabled</healthcheck>
-    -->
   </admin>
 
   <updateRequestProcessorChain key="dataimport" default="true">
